syntax = "proto3";

option go_package = "github.com/abdulmajid18/user-service/service";

service Users {
    rpc GetUser(UserGetRequest) returns (UserGetReply) {}
}

message User {
    string id         = 1;
    string first_name = 2;
    string last_name  = 3;
    int32 age         = 4;
}

message UserGetRequest {
    string email = 1;
    string id    = 2;
}

message UserGetReply {
    User user = 1;
}